tests/NormalTests/paczka1/small_fuzzy/75576070.err
Error in line 1: bSX0oah6 A479 18,8
Error in line 2: A815 A666 70,2
